# statsbook

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  README.md  genindex.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_sources/contents/: home.md
_sources/contents/foundation/: home.md  test.ipynb  test.py
_sources/contents/machine_learning/: home.md  metrics.py
_sources/contents/simulations/: confidence_intervals.py
book/: _config.yml  _toc.yml
book/contents/: home.md
book/contents/bayesian/: linear_regression.py
book/contents/causal_inference/: propensity_scores.py  regression_discontinuity.py
book/contents/foundation/: test.py
book/contents/machine_learning/: metrics.py  pipeline.py
book/contents/neural_networks/: activation.py  home.md  regression_tf.py  shallow.py
book/contents/simulations/: binomial_normal_approx.py  confidence_intervals.py  pvalues.py
contents/: home.html
contents/causal_inference/: propensity_scores.html  regression_discontinuity.html
contents/causal_inference/framework/: README.html  fundamental_problem.html  ignorability.html  matching.html
contents/foundation/: home.html  test.html
contents/foundation/linear_algebra/: review.html
contents/machine_learning/: home.html  metrics.html  pipeline.html
contents/neural_networks/: home.html
contents/simulations/: README.html  confidence_intervals.html  pvalues.html
docs/: questions.md
docs/4 machine_learning/: metrics.py
docs/5 bayesian/: basic_example.py  home.md
(+118 files in other folders)
